# llm_policy_gate

./: .gitignore  Makefile  README.md  pyproject.toml
cli/: check.py
dashboard/: app.py
examples/: demo_agent.py  sentinel_policy.yaml
sentinel/: __init__.py  callbacks.py  core.py  metrics.py  policy.py  telemetry.py  violation.py  watcher.py
sentinel/async_guards/: __init__.py  hallucination.py  output_validator.py  schema_validator.py  topic_guardrail.py
sentinel/stores/: __init__.py  base.py  memory.py  redis_store.py  sqlite.py
sentinel/sync_guards/: __init__.py  budget_gate.py  circuit_breaker.py  input_validator.py  rate_limiter.py  semantic_detector.py
tests/: test_async_guards.py  test_callbacks.py  test_cli.py  test_core.py  test_metrics.py  test_policy.py  test_policy_routing.py  test_rate_limiter.py  test_schema_validator.py  test_semantic_detector.py  test_shadow_mode.py  test_sync_guards.py  test_telemetry.py  test_violation_stores.py
